# peslib

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: autotest.yaml  release.yaml
peslib/: __init__.py  base.py  pes.py  utils.py
peslib/data/CH2OH/: coord.in
src/: N2O2_3A_MB-PIP-MEG2.f90  N2O2_3A_MB-PIP-MEG2.pyf  O4_singlet.f90  O4_singlet.pyf  O4_triplet_v2.f  O4_triplet_v2.pyf  PES_N4_singlet_umn_v3.f90  PES_N4_singlet_umn_v3.pyf  README.md  c2h6oh-v2020.f  c2h6oh.pyf  ch4oh.f  ch4oh.pyf  h2o2.f  h2o2.pyf  nh3.f  nh3.pyf  o4_singlet.f90  oh3.f90  oh3.pyf  phoh.pyf  phoh_aprp.f  phsch3.f90  phsch3.pyf
src/CH2OH/: Makefile  ch2oh.pyf  evalsurf.f90
src/CH2OH/data/: connect.in  geom.in  hd.data  surfgen.in
src/CH2OH/lib/: combinatorial.f90  hddata.f90  io.f90  libinternal.f90  libsym.f90  libutil.f90  potlib.f90  progdata.f90
src/O2H3/: h3o2-pipnn.f  o2h3.pyf
src/OH3/: adiabats.f90  dcdx_u12.f90  dcdx_u13.f90  dcdx_u23.f90  diabaticcouplings.f90  diabats.f90  oh3.pyf  pes.f90
src/lib/: oh3_util.f90  utility.f
tests/: test_pes.py
