[project]
name = "peslib"
version = "0.0.1"
authors = [
  { name="Chong", email="chongteng8@gmail.com" },
]
description = "ASE PES Library"
#readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'ase', ]
[build-system]
requires = ["setuptools<60.0", "wheel", "numpy<1.25.0"]
build-backend = "setuptools.build_meta"
